Bug 42090 - [r300/compiler] [bisected] sauerbraten texture corruption
Summary: [r300/compiler] [bisected] sauerbraten texture corruption
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Drivers/Gallium/r300 (show other bugs)
Version: git
Hardware: x86 (IA32) Linux (All)
: medium major
Assignee: Default DRI bug account
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-10-21 06:56 UTC by Fabio Pedretti
Modified: 2011-10-27 17:59 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
Possible fix (2.69 KB, patch)
2011-10-22 17:51 UTC, Tom Stellard
Details | Splinter Review

Description Fabio Pedretti 2011-10-21 06:56:55 UTC
Monsters in sauerbraten have missing textures. I bisected and got:

There are only 'skip'ped commits left to test.
The first bad commit could be any of:
163629fd05166b78d70c2c26f4a922b296e8999d
0dc97e7fd49a5b8db25b95a1020fc598dba5cf65
We cannot bisect more!

the first introduce an all screen corruption, the second change it to missing textures in monsters.

My chip:
r300: DRM version: 2.9.0, Name: ATI RV530, ID: 0x71c5, GB: 1, Z: 2
r300: GART size: 509 MB, VRAM size: 256 MB
r300: AA compression RAM: YES, Z compression RAM: YES, HiZ RAM: YES
Comment 1 Tom Stellard 2011-10-22 17:51:52 UTC
Created attachment 52640 [details] [review]
Possible fix

Does this patch fix the problem?
Comment 2 Fabio Pedretti 2011-10-24 00:19:29 UTC
(In reply to comment #1)
> Created attachment 52640 [details] [review] [review]
> Possible fix
> 
> Does this patch fix the problem?

Yes (tested on current git and also with 0dc97e7fd49a5b8db25b95a1020fc598dba5cf65 reverted: both type of corruptions are fixed with the patch).
Comment 3 Tom Stellard 2011-10-27 17:59:51 UTC
Fix in git master commit 17a1c0cb0d9e04607c1726d04ef23485979dfc98


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.